// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article screen renders expected components and styles in desktop 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scroll-container"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
        data-testid="scroll-container-header"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content scrollContainer scrollContainer "
        data-testid="scroll-container-content"
      >
        <div>
          <div
            class="content "
            data-testid="hc-article"
          >
            <h2
              class="title"
              data-testid="hc-article-title"
            >
              help
            </h2>
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              data-testid="hc-article-body"
              role="presentation"
            >
              here
            </div>
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
        data-testid="scroll-container-footer"
      />
    </div>
  </div>
</div>
`;

exports[`article screen renders expected components and styles in mobile 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer mobile"
      data-testid="scroll-container"
    >
      <header
        class="header userHeader"
        data-testid="scroll-container-header"
      >
        <h1
          class="title titleMobile"
        >
          Help
        </h1>
      </header>
      <div
        class="content scrollContainerMobile scrollContainer  contentMobile"
        data-testid="scroll-container-content"
      >
        <div>
          <div
            class="content contentMobile"
            data-testid="hc-article"
          >
            <h2
              class="title"
              data-testid="hc-article-title"
            >
              help
            </h2>
            <div
              class="originalArticleButton"
            >
              <a
                aria-label="View original article"
                target="_blank"
                title="View original article"
              >
                <span
                  class="container Icon--link-external mobile"
                  data-testid="Icon--link-external"
                  type="Icon--link-external"
                >
                  <svg
                    aria-hidden="true"
                    realfilename="link-external.svg"
                  />
                </span>
              </a>
            </div>
            <div
              class="article"
              data-testid="hc-article-body"
              role="presentation"
            >
              here
            </div>
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
        data-testid="scroll-container-footer"
      />
    </div>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in desktop 1`] = `
<div>
  <div>
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scroll-container"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
        data-testid="scroll-container-header"
      >
        <h1
          class="title"
        >
          Answer Bot
        </h1>
      </header>
      <div
        class="content scrollContainer"
        data-testid="scroll-container-content"
      >
        <div>
          <div
            class="messages"
          />
        </div>
      </div>
      <footer
        class="footer footerWithLogo "
        data-testid="scroll-container-footer"
      >
        <div>
          <div
            class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
            data-garden-id="textfields.text_group"
            data-garden-version="3.7.0"
          >
            <label
              class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
              data-garden-id="textfields.label"
              data-garden-version="3.7.0"
              for="garden-text-field-0--input"
              id="garden-text-field-0--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-invalid="false"
              aria-labelledby="garden-text-field-0--label"
              class="input Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
              data-garden-id="textfields.textarea"
              data-garden-version="3.7.0"
              data-testid="message-field"
              id="garden-text-field-0--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="3"
            />
          </div>
        </div>
      </footer>
    </div>
    <a
      class="
      logo
      formSuccess
      
      zendeskLogo 
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in mobile 1`] = `
<div>
  <div>
    <div
      class="container flexContainer mobile"
      data-testid="scroll-container"
    >
      <header
        class="header userHeader"
        data-testid="scroll-container-header"
      >
        <h1
          class="title titleMobile"
        >
          Answer Bot
        </h1>
      </header>
      <div
        class="content scrollContainerMobile contentMobile"
        data-testid="scroll-container-content"
      >
        <div>
          <div
            class="messages"
          />
        </div>
      </div>
      <footer
        class="footer footerMobile footerMobileWithLogo "
        data-testid="scroll-container-footer"
      >
        <div>
          <div
            class="containerMobile"
          >
            <div
              class="inputContainerMobile"
            >
              <div
                class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-2--input"
                  id="garden-text-field-2--label"
                >
                  Type your question here...
                </label>
                <textarea
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-2--label"
                  class="input inputMobile fieldMobile Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
                  data-garden-id="textfields.textarea"
                  data-garden-version="3.7.0"
                  data-testid="message-field"
                  id="garden-text-field-2--input"
                  name="answerBotInputValue"
                  placeholder="Type your question here..."
                  rows="1"
                />
              </div>
            </div>
            <button
              aria-label="Send"
              class="button iconSendAnswerBotMobile IconButton-x15t1e-0 index__c-btn--icon___3Mbhs laoDmX Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--basic___3PMxO index__c-btn--muted___3GOeG index__c-btn--pill___3Lsyd index__c-btn--lg___16u8A lcPfmb"
              data-garden-id="buttons.icon_button"
              data-garden-version="3.7.0"
              tabindex="0"
              type="button"
            >
              <span
                class="container Icon--sendChat"
                data-testid="Icon--sendChat"
                type="Icon--sendChat"
              >
                <svg
                  aria-hidden="true"
                  realfilename="widget-icon_sendChat.svg"
                />
              </span>
            </button>
          </div>
        </div>
      </footer>
    </div>
    <a
      class="
      logo
      formSuccess
      
      zendeskLogo zendeskLogoChatMobile
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;
